<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vladymix.currencyexchange.AddDivisaActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:text="@string/lb_Pais" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/solid_primary" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_name" />

            <TextView
                android:text="@string/lb_nombremoneda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/solid_primary"
                android:id="@+id/textView2"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_namecurrency" />

            <TextView
                android:text="@string/lb_code_moneda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/solid_primary"
                android:id="@+id/textView8"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_codecurrency" />

            <TextView
                android:text="@string/lb_valorMoneda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/solid_primary"
                android:id="@+id/textView3"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_valuecurrency" />

            <TextView
                android:text="@string/lb_Selection_flag_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/solid_primary"
                android:id="@+id/textView4"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/add_circle"
                    android:src="@drawable/circle_eur" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_id_recurso"
                    android:id="@+id/add_id_circle_flag"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <TextView
                android:text="@string/lb_selection_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/solid_primary"
                android:id="@+id/textView7"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/add_flag"
                    android:src="@drawable/flag_eur"
                    android:focusableInTouchMode="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_id_recurso"
                    android:id="@+id/add_id_flag"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_add_item"
                    android:id="@+id/button"
                    android:layout_gravity="center_horizontal"
                    android:onClick="addItem" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_limpiar"
                    android:id="@+id/button2"
                    android:layout_gravity="center_horizontal"
                    android:onClick="CleanComponents" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
